--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "1.15.2",
     "express": "4.14.0",
+    "mongodb": "^3.2.6",
     "mongoose": "4.7.0",
     "node-restful": "0.2.5",
     "pm2": "2.1.5"
