--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "1.15.2",
-    "express": "4.14.0",
-    "mongodb": "^3.2.6",
-    "mongoose": "4.7.0",
-    "node-restful": "0.2.5",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.5.12",
+    "node-restful": "^0.2.6",
     "pm2": "2.1.5"
   },
   "devDependencies": {
