--- a/package.json
+++ b/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "backend",
+  "name": "example-restful",
   "version": "1.0.0",
   "description": "",
-  "main": "src/loader.js",
+  "main": "loader.js",
   "scripts": {
-    "dev": "nodemon",
-    "production": "pm2 start src/loader.js --name cards-backend"
+    "dev": "nodemon"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.12",
-    "node-restful": "^0.2.6",
-    "pm2": "2.1.5"
+    "node-restful": "^0.2.6"
   },
-  "devDependencies": {
-    "nodemon": "1.11.0"
+  "dependencies": {
+    "nodemon": "^1.19.1"
   }
 }
